--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://yitian6.github.io   #待写
+url: https://yitian6.github.io   
 root: /
 permalink: archives/:abbrlink.html
 abbrlink:
@@ -201,3 +201,18 @@ moon_menu:
     icon: fa fa-chevron-down
     func: back2bottom
     order: -2
+
+
+douban:
+  user: 205700541
+  builtin: true
+  book:
+    title: 阅读
+    quote: 书如其人，与其对话，获益匪浅
+  movie:
+    title: 'This is my movie title'
+    quote: 'This is my movie quote'
+  game:
+    title: 'This is my game title'
+    quote: 'This is my game quote'
+  timeout: 10000
