--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo": "^4.0.0",
     "hexo-abbrlink": "^2.0.5",
     "hexo-deployer-git": "^2.1.0",
+    "hexo-douban": "^1.1.3",
     "hexo-filter-nofollow": "^2.0.2",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-baidu-sitemap": "^0.1.6",
